<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/contentMain">

        <EditText
            android:id="@+id/main_introduce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_introduce"
            android:layout_margin="10dp"
            android:height="@dimen/main_calc.input.height"
            android:textAlignment="viewEnd"
            android:inputType="none"
            android:textIsSelectable="true"
            android:maxLength="16"
            android:drawablePadding="@dimen/main_calc.input.img"
            android:drawableEnd="@drawable/ic_backspace_black_36dp"/>
        <LinearLayout
            android:id="@+id/main_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_introduce"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_calc.btn.widht"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/main_btnSeven"
                    android:layout_width="@dimen/main_calc.btn.widht"
                    android:layout_height="match_parent"
                    android:text="@string/main_btnSeven"
                    android:theme="@style/buttonMD"/>
                <Button
                    android:id="@+id/main_btnEight"
                    android:layout_width="@dimen/main_calc.btn.widht"
                    android:layout_height="match_parent"
                    android:text="@string/main_btnEight"
                    android:theme="@style/buttonMD"/>
                <Button
                    android:id="@+id/main_btnNine"
                    android:layout_width="@dimen/main_calc.btn.widht"
                    android:layout_height="match_parent"
                    android:text="@string/main_btnNine"
                    android:theme="@style/buttonMD"/>
                <Button
                    android:id="@+id/main_btnC"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/main_btnC"
                    android:theme="@style/buttonMDDanger"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_calc.btn.widht"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/main_btnFour"
                    android:layout_width="@dimen/main_calc.btn.widht"
                    android:layout_height="match_parent"
                    android:text="@string/main_btnFour"
                    android:theme="@style/buttonMD"/>
                <Button
                    android:id="@+id/main_btnFive"
                    android:layout_width="@dimen/main_calc.btn.widht"
                    android:layout_height="match_parent"
                    android:text="@string/main_btnFive"
                    android:theme="@style/buttonMD"/>
                <Button
                    android:id="@+id/main_btnSix"
                    android:layout_width="@dimen/main_calc.btn.widht"
                    android:layout_height="match_parent"
                    android:text="@string/main_btnSix"
                    android:theme="@style/buttonMD"/>
                <Button
                    android:id="@+id/main_btnDiv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:text="@string/main_btnDiv"
                    android:theme="@style/buttonMDDark"/>
                <Button
                    android:id="@+id/main_btnMul"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:text="@string/main_btnMul"
                    android:textAllCaps="false"
                    android:theme="@style/buttonMDDark"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_calc.btn.widht"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/main_btnOne"
                    android:layout_width="@dimen/main_calc.btn.widht"
                    android:layout_height="match_parent"
                    android:text="@string/main_btnOne"
                    android:theme="@style/buttonMD"/>
                <Button
                    android:id="@+id/main_btnTwo"
                    android:layout_width="@dimen/main_calc.btn.widht"
                    android:layout_height="match_parent"
                    android:text="@string/main_btnTwo"
                    android:theme="@style/buttonMD"/>
                <Button
                    android:id="@+id/main_btnThree"
                    android:layout_width="@dimen/main_calc.btn.widht"
                    android:layout_height="match_parent"
                    android:text="@string/main_btnThree"
                    android:theme="@style/buttonMD"/>
                <Button
                    android:id="@+id/main_btnRes"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:text="@string/main_btnRes"
                    android:theme="@style/buttonMDDark"/>
                <Button
                    android:id="@+id/main_btnSum"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:text="@string/main_btnSum"
                    android:theme="@style/buttonMDDark"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_calc.btn.widht"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/main_btnPoint"
                    android:layout_width="@dimen/main_calc.btn.widht"
                    android:layout_height="match_parent"
                    android:text="@string/main_btnPoint"
                    android:theme="@style/buttonMDDark"/>
                <Button
                    android:id="@+id/main_btnZero"
                    android:layout_width="@dimen/main_calc.btn.widht"
                    android:layout_height="match_parent"
                    android:text="@string/main_btnZero"
                    android:theme="@style/buttonMD"/>
                <Button
                    android:id="@+id/main_btnEqual"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/main_btnEqual"
                    android:theme="@style/buttonMDDarker"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.design.widget.TextInputLayout>

</ScrollView>